5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1756_1576.log
== SUBMITION (2019-05-22 15:12:48) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa)
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.0984099
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 20
    if(v1 == t and v2 = pa)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:12:49) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa)
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 20
    if(v1 == t and v2 = pa)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:12:49) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa)
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.278896
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 20
    if(v1 == t and v2 = pa)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:12:54) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.160635
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 20
    if(v1 == t and v2 = pa):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:12:55) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 20
    if(v1 == t and v2 = pa):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:12:57) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 = pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 20
    if(v1 == t and v2 = pa):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:13:06) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:13:06) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusápia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.533682
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
EMPATE
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
EMPATE
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:13:23) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:13:24) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.452683
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
12
BARSANULFO
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
EMPATE
10
BARSANULFO
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
EMPATE
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:14:26) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 27
    if(cont1 > cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:14:27) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 27
    if(cont1 > cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:14:35) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
else:
	print("EMPATE")
print(size(v1))
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:17:30) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2)
				print("EMPATE")
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.122761
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 25
    if(cont1 >= cont2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:17:30) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2)
				print("EMPATE")
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:17:36) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- EXECUTION TIME:
0.221881
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:17:38) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:17:39) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
if(cont1 > cont2):
	print("EUSAPIA")
else:
	print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:18:11) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
			else:
				if(cont1 > cont2):
					print("EUSAPIA")
				else:
					print("BARSANULFO")
					
-- EXECUTION TIME:
0.106726
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:18:12) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
			else:
				if(cont1 > cont2):
					print("EUSAPIA")
				else:
					print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:18:32) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))#
         if(cont1 >= cont2):
				print("EMPATE")
			else:
				if(cont1 > cont2):
					print("EUSAPIA")
				else:
					print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:18:37) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
			else:
				if(cont1 > cont2):
					print("EUSAPIA")
				else:
					print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:18:38) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         if(cont1 >= cont2):
				print("EMPATE")
			else:
				if(cont1 > cont2):
					print("EUSAPIA")
				else:
					print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:19:00) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         	if(cont1 >= cont2):
					print("EMPATE")
				else:
					if(cont1 > cont2):
						print("EUSAPIA")
					else:
						print("BARSANULFO")
					
-- EXECUTION TIME:
0.192927
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 25
    if(cont1 >= cont2):
                      ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:19:00) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         	if(cont1 >= cont2):
					print("EMPATE")
				else:
					if(cont1 > cont2):
						print("EUSAPIA")
					else:
						print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 >= cont2):
                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:19:12) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         	if(cont1 == cont2):
					print("EMPATE")
				else:
					if(cont1 > cont2):
						print("EUSAPIA")
					else:
						print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 == cont2):
                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:19:14) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
         	if(cont1 == cont2):
					print("EMPATE")
				else:
					if(cont1 > cont2):
						print("EUSAPIA")
					else:
						print("BARSANULFO")
					
-- ERROR:
File "XXXX", line 25
    if(cont1 == cont2):
                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:19:44) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
0.339534
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:19:44) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
#print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:20:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:08) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
0.49117
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:25) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
0.402508
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:20:31) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:36) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
0.531797
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
12
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:39) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
1.84714
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:39) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
2.01634
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:39) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
2.2432
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:40) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))
if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")
					
-- EXECUTION TIME:
2.37957
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:53) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.35203
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:20:54) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:55) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.102259
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1756/1576/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:20:56) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:56) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
1.0981
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Jogadas Eusapia: Jogadas Barsanulfo: 12
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:20:57) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.93567
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Jogadas Eusapia: Jogadas Barsanulfo: 10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
Jogadas Eusapia: Jogadas Barsanulfo: 18
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:22:01) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont1 > cont2 or cont2 > cont1):
	if (v1 == pa and v2 == pe):
		cont1 = cont1 + 1
	else:
		if(v1 == pe  and v2 == t):
			cont1 = cont1 + 1
		else:
			if(v1 == t and v2 == pa):
				cont1 = cont1 + 1
			else:
				cont2 = cont2 + 1
				
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.405502
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:29:44) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont = 0
cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont < size(v1)):
	if (v1[cont] == pa and v2[cont] == pe):
		cont1 = cont1 + 1
	elif(v1[cont] == pe  and v2[cont] == t):
		cont1 = cont1 + 1
	elif(v1[cont] == t and v2[cont] == pa):
		cont1 = cont1 + 1
	elif(v1[cont] != v2[cont]):
		cont2 = cont2 + 1
	cont = cont + 1
				
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:30:00) 
-- CODE:
from numpy import *

v1 = array(eval(input("Jogadas Eusapia: ")))
v2 = array(eval(input("Jogadas Barsanulfo: ")))

cont = 0
cont1 = 0 #variavel contadora de EUSAPIA
cont2 = 0 #variavel contadora de BARSABULFO
#representacao de valores
pe = 11
pa = 22
t = 33

while(cont < size(v1)):
	if (v1[cont] == pa and v2[cont] == pe):
		cont1 = cont1 + 1
	elif(v1[cont] == pe  and v2[cont] == t):
		cont1 = cont1 + 1
	elif(v1[cont] == t and v2[cont] == pa):
		cont1 = cont1 + 1
	elif(v1[cont] != v2[cont]):
		cont2 = cont2 + 1
	cont = cont + 1
				
print(size(v1))

if(cont1 == cont2):
	print("EMPATE")
else:
	if(cont1 > cont2):
		print("EUSAPIA")
	else:
		print("BARSANULFO")		
-- EXECUTION TIME:
0.646524
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
